refactor - add last_created_projects and name_with_description methods to project.rb

--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -8,7 +8,7 @@
 <h1>Projects</h1>
 	<ul>
 	<% @projects.each do |project| %>
-		<li><%="#{project.name} #{project.description}"%></li>
+		<li><%=project.name_with_description%> </li>
 	
 	<% end %>
 	</ul>
