--- a/app/views/entries/index.html.erb
+++ b/app/views/entries/index.html.erb
@@ -1,6 +1,7 @@
 <h2><%=@project.name%></h2>
-<h3>Total time this month: <%=@project.total_hours_in_month(Time.now.month,Time.now.year)%></h3>
+<h4><%=@project.description%></h4>
 <ul><% @entries.each do |entry| %>
 	<li><%=entry.get_string%></li>
 	<%end%>
 </ul>
+<p>Total time this month: <strong><%="#{@current_month_hours} hours #{@current_month_minutes} minutes"%></strong> </p>
