--- a/app/views/entries/new.html.erb
+++ b/app/views/entries/new.html.erb
@@ -1,3 +1,11 @@
+<% if @entry.errors.any? %>
+<ul>
+	<% @entry.errors.full_messages.each do |e| %>
+	<li><%= e %></li>
+	<% end %>
+</ul>
+<% end %>
+
 <%= form_for [@project, @entry] do |f| %>
 	<%= f.label :hours %>
 	<%= f.text_field :hours %>
