--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -2,3 +2,5 @@
 	<h1>Project Information</h1>
 	<h2><%=@project.name%></h2>
 	<p><%=@project.description%></p>
+	<p><%= link_to("<< Back to Projects",projects_path)%></p>
+	<p><%= link_to("Entries",project_entries_path(@project))%></p>
