--- a/app/views/entries/index.html.erb
+++ b/app/views/entries/index.html.erb
@@ -1,3 +1,5 @@
+<%=	flash_message %>
+
 <h2><%=@project.name%></h2>
 <h4><%=@project.description%></h4>
 <ul><% @entries.each do |entry| %>
@@ -8,6 +10,8 @@
 	</li>
 	<%end%>
 </ul>
-<p>Total time this month: <strong><%="#{@current_month_hours} hours #{@current_month_minutes} minutes"%></strong> </p>
+<p>Total time this month: 
+<strong><%= show_time(@project,Time.now) %></strong> </p>
+
 <p><%= link_to("Add new entry",new_project_entry_path)%></p>
 <p><%= link_to("<< Back to projects",projects_path)%></p>
