--- a/app/views/entries/edit.html.erb
+++ b/app/views/entries/edit.html.erb
@@ -1,24 +1,3 @@
-<%=	flash_message %>
-<% if @entry.errors.any? %>
-<ul>
-	<% @entry.errors.full_messages.each do |e| %>
-	<li><%= e %></li>
-	<% end %>
-</ul>
-<% end %>
+<h2>Editing an entry in <%=@project.name %> project</h2>
 
-<%= form_for [@project, @entry] do |f| %>
-	<%= f.label :hours %>
-	<%= f.text_field :hours, size: 4 %>
-	<br>
-	<%= f.label :minutes %>
-	<%= f.text_field :minutes, size: 4 %>
-	<br>
-	<%= f.label :date %>
-	<%= f.date_field :date, size: 4 %>
-	<br>
-	<%= f.submit 'Save' %>
-
-<% end %>
-
-<%= link_to "Cancel", project_entries_path(@project) %>
+<%= render 'shared/form' %>
